--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,36 +1,73 @@
+a, a:visited{
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover{
+    color: #fff;
+}
+
+.chirp-user-img{
+    border-radius: 50%;
+    float: right;
+    width: 64px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+
 .main-container, .user-col, .chirps-col{
     height: 100vh;
     background-color: #222;
+    overflow-x: scroll;
 }
 
 .chirps-box{
     background-color: #111;
-    width: 50%;
-    height: 90vh;
-    border-radius: 5%;
-    overflow-y: hidden;
+    width: 600px;
+    height: 95vh;
+    overflow-y:  scroll;
+    margin-top: 25px;
+    border-radius: 25px;
+    padding-right: 0;
+    position: fixed;
 }
 
-.post-chirp{
-    padding: 32px 50px 32px 50px;
+#chirps-box-label{
+    background: #0e0e0e;
+    color: #fff;
+    padding: 32px 50px 25px 25px;  
+    position: fixed;
+    width: inherit;
+    border-radius: 25px 25px 0 0;
+    z-index: 1;
+}
+
+::-webkit-scrollbar {
+    width: 0;  
+    background: transparent;
+}
+
+#post-chirp{
+    padding: 120px 50px 32px 50px;
     width: 100%;
     padding-bottom: 75px;
     border-bottom: 1px #222 solid;
 }
 
-.new-chirp-label{
+#new-chirp-label{
     float: left;
 }
 
 .new-chirp-input{
     width: 100%;
     min-height: 100px;
-    vertical-align: text-top;
     resize: none;
     background: none;
     color: #fff;
     padding: 12px;
-    border: 1px solid #333;
+    border: 1px solid #222;
     border-radius: 5px;
     overflow: hidden;
 }
@@ -38,13 +75,26 @@
 .new-chirp-button{
     margin-top: 8px;
     float: right;
-    width: 124px;
+    width: 6vw;
+    border: 0;
     border-radius: 50px;
+    color: #333;
+    font-weight: 700;
+    background: #fff;
+}
+
+.new-chirp-button:hover{
+    color: #fff;
+    background: #333;
 }
 
 .chirp{
     border-bottom: 1px #222 solid;
-    padding: 25px;
+    padding: 25px 10px 25px 10px;
+}
+
+.chirp:hover{
+    background-color: #0e0e0e;
 }
 
 .chirp-user{
@@ -56,11 +106,11 @@
 }
 
 .chirp-time{
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .likes-label{
-    font-size: 24px;
+    font-size: 18px;
     float: right;
 }
 
@@ -72,17 +122,4 @@
 
 .like-button:hover{
     color: red;
-}
-
-
-
-h3{
-    margin-top: 25px;
-    padding-left: 25px;
-    margin-bottom: 12px;
-}
-
-img{
-    border-radius: 50%;
-    float: right;
 }
