--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@ a:hover{
 
 #user-box{
     background-color: #111;
-    height: 290px;
+    min-height: 290px;
     width: 400px;
     margin-top: 25px;
     border-radius: 25px;
@@ -28,6 +28,10 @@ a:hover{
     border-bottom: 3px solid #fff;
 }
 
+#user-box-username{
+    font-weight: 700
+}
+
 #user-img{
     width: 72px;
     border-radius: 50%;
@@ -41,6 +45,7 @@ a:hover{
 
 #user-box-settings, #user-box-logout{
     font-weight: 500;
+    padding-bottom: 25px;
 }
 
 #user-box-info {
@@ -95,7 +100,7 @@ a:hover{
     height: 95vh;
     overflow-y:  scroll;
     margin-top: 25px;
-    border-radius: 25px;
+    border-radius: 30px 30px 25px 25px;
     padding-right: 0;
     position: fixed;
 }
@@ -103,7 +108,7 @@ a:hover{
 #main-component-title{
     background: #0e0e0e;
     color: #fff;
-    padding: 32px 50px 25px 25px;  
+    padding: 34px 50px 25px 25px;  
     position: fixed;
     width: inherit;
     border-radius: 25px 25px 0 0;
